Fixed issue causing comments to overflow

--- a/src/components/comments/Comments.css
+++ b/src/components/comments/Comments.css
@@ -24,6 +24,10 @@
 	padding-right: 10px;
 }
 
+.comment-data {
+	word-break: break-word;
+}
+
 .comment-body > div {
 	display: flex;
 	gap: 5px;
